--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "main":["src/treeGrid.css","src/tree-grid-directive.js"],
     "licence":"MIT",
     "keywords":["angularjs","bootstrap","tree", "grid","widget"],
-    "authors":["Md Khan"],
+    "authors":["Md Khan","Xinghuang Xu"],
     "homepage"  :"https://github.com/okigan/tree-grid-directive",
     "repository":{
         "type":"git",
